Support for custom json file.

--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,11 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.0"
+version = "1.1"
 group = "io.github.zekerzhayard"
 archivesBaseName = "BatterGamingFix"
+
+sourceCompatibility = targetCompatibility = 1.8
 
 jar {
     manifest.attributes([
